syntax = "proto3";

package dispositivo;

// REQUISIÇÃO
message Requisicao {
  string name_client = 1;
  string name_device = 2;

  oneof tipo {
    RequisicaoLer ler = 3;
    RequisicaoEscrever escrever = 4;
  }
}

message RequisicaoLer {
  ComandoOperacao operacao = 1; // sempre LER
}

message RequisicaoEscrever {
  ComandoOperacao operacao = 1; // sempre ESCREVER
  InfoDeviceClient info_device = 2;
}

// COMANDOS
message ComandoOperacao {
  enum TipoOperacao {
    LER = 0;
    ESCREVER = 1;
  }
  TipoOperacao operacao = 1;
}

// DADOS DE ENTRADA
message InfoDeviceClient {
  string status = 1;
  string type_device = 2;
  map<string, string> parametros = 3;
}

// DADOS DE LEITURA
message ReadDevice {
  string name_device = 1;
  string ip_device = 2;
  uint32 port_device = 3;
  string status = 4;
  string type_device = 5;
  map<string, string> parametros = 6;
}

// RESPOSTA
message Resposta {
  oneof tipo {
    RespostaOk ok = 1;
    RespostaErro erro = 2;
  }
}

message RespostaOk {
  string comando = 1;
  map<string, string> dados = 2;
  ReadDevice device_info = 3;
}

message RespostaErro {
  string comando = 1;
  string mensagem = 2;
  map<string, string> detalhes = 3;
}

message EnderecoInfo {
  string id_gateway_for_save_info = 1;
  string port_gateway_for_save_info = 2;
}